Correction erreur : ajout de marge sur le pied de page des restaurants à partir de la version tablette jusqu'au écran large

--- a/assets/css/restaurant.scss
+++ b/assets/css/restaurant.scss
@@ -302,6 +302,7 @@
     align-items: center;
     position : relative ;
     top : -34px;
+    padding-top: 64px;
 
     &__logo {
       height : 27px;
